# the-blind-machine-paper

./: MANIFEST.sha256  README.md
applications/allele_frequency_count/: .blind-signature  README.md  SECURITY.md
applications/allele_frequency_count/signed/: local_data_owner.py  local_project_owner.py  manifest.yml  server.py
applications/allele_frequency_count/tests/: test_local_loop.py
applications/allele_frequency_with_variance/: .blind-signature  BENCHMARK.md  README.md  SECURITY.md
applications/allele_frequency_with_variance/signed/: local_data_owner.py  local_project_owner.py  manifest.yml  server.py
applications/allele_frequency_with_variance/tests/: test_local_loop.py
applications/carrier_count/: .blind-signature  README.md  SECURITY.md
applications/carrier_count/signed/: local_data_owner.py  local_project_owner.py  manifest.yml  server.py
applications/carrier_count/tests/: test_local_loop.py
applications/cohort_histogram/: .blind-signature  README.md  SECURITY.md
applications/cohort_histogram/signed/: local_data_owner.py  local_project_owner.py  manifest.yml  server.py
applications/cohort_histogram/tests/: test_local_loop.py
applications/genotype_pair_ld/: README.md  SECURITY.md
applications/genotype_pair_ld/signed/: local_data_owner.py  local_project_owner.py  manifest.yml  server.py
applications/genotype_pair_ld/signed/env/: pyproject.toml
applications/genotype_pair_ld/tests/: test_local_loop.py  test_pair_ld.py
applications/genotype_phenotype_covariance/: .blind-signature  00_keygen.py  10_encode.py  20_encrypt.py  30_compute_encrypted.py  50_decode.py  README.md  SECURITY.md
applications/genotype_phenotype_covariance/signed/: local_data_owner.py  local_project_owner.py  manifest.yml  server.py
applications/genotype_phenotype_covariance/signed/env/: pyproject.toml
applications/genotype_phenotype_covariance/tests/: test_local_loop.py
applications/gwas_chi_square/: .blind-signature  BENCHMARK.md  README.md  SECURITY.md
applications/gwas_chi_square/signed/: local_data_owner.py  local_project_owner.py  manifest.yml  server.py
applications/gwas_chi_square/tests/: test_local_loop.py
applications/gwas_covariate_adjusted/: .blind-signature  BENCHMARK.md  README.md  SECURITY.md
applications/gwas_covariate_adjusted/signed/: local_data_owner.py  local_project_owner.py  manifest.yml  server.py
applications/gwas_covariate_adjusted/signed/env/: pyproject.toml
applications/gwas_covariate_adjusted/tests/: test_local_loop.py
applications/polygenic_score_aggregate/: .blind-signature  README.md  SECURITY.md
applications/polygenic_score_aggregate/signed/: local_data_owner.py  local_project_owner.py  manifest.yml  server.py
applications/polygenic_score_aggregate/tests/: test_local_loop.py
applications/polygenic_score_inference/: .blind-signature  BENCHMARK.md  README.md  SECURITY.md
applications/polygenic_score_inference/signed/: _packing.py  local_data_owner.py  local_project_owner.py  manifest.yml  server.py
applications/polygenic_score_inference/tests/: test_local_loop.py
cli/: .gitignore  COMMANDS.md  LICENSE  README.md  SECURITY.md  UX.md  pyproject.toml
cli/.github/: CODEOWNERS  dependabot.yml
cli/.github/workflows/: release.yml  security.yml  verify.yml
cli/examples/: README.md  register_and_run.py
cli/scripts/: check_commit_metadata.py  check_dist.py  check_release_tag.py  check_runtime_lock.py  create_release_tag.py  secure_merge.py
cli/src/blind/: __init__.py  __main__.py  api.py  benchmark.py  certificates.py  console.py  context.py  doctor.py  errors.py  hashing.py  invitations.py  login.py  provenance.py  simulate.py  store.py  trust.py  version.py  workspace.py
cli/src/blind/cli/: __init__.py  app.py
cli/src/blind/cli/groups/: __init__.py  applications.py  certificates.py  contributions.py  data.py  dev.py  jobs.py  keys.py  projects.py  results.py  simulations.py
cli/src/blind/runtime/: __init__.py  application_io.py  bundle.py  compute.py  sandbox.py  sealer.py  shims.py  stages.py
cli/src/blind/runtime/stage_shims/: 00_keygen.py  40_decrypt.py
cli/tests/: conftest.py  smoke_test.py  test_api.py  test_application_io.py  test_benchmark.py  test_bundle.py  test_certificates.py  test_cli.py  test_compute.py  test_credits.py  test_entrypoint.py  test_env_lock.py  test_example_security.py  test_hashing.py  test_invitations.py  test_jobs_watch.py  test_pipeline.py  test_porcelain.py  test_results_verify.py  test_sandbox.py  test_security.py  test_security_workflow.py  test_signed_contribute.py  test_store_login.py
cli/tests/fixtures/: certificate_v1_golden.json
cli/tests/security/: sandbox_probe.py
experiments/: .gitignore  DATA_SOURCES.md  README.md  RUN_TRANSCRIPT.txt  build_public_real_dna_verification_packages.py  e10_gwas_chi_square.sh  e1_exactness_taxonomy.sh  e2_security_matrix.sh  e3_feasibility.sh  e4_differencing.sh  e5_real_human_dna_igsr.sh  e6_public_af_fst_panel.sh  e7_beacon_release_policy.sh  e8_public_ld_window.sh  e9_heprs_prs_reproduction.sh  fetch_public_data.sh  lib.sh  public_genomics_common.py  replicate_all.sh  run_all.sh  setup.sh  summarize_public_real_dna.py  verify.py
experiments/beacon_release_policy_2026_07_09/: README.md  run_study.py
experiments/beacon_release_policy_2026_07_09/results/: aggregate_risk.json  blindmachine_results.json  manifest.json  policy_risk_summary.csv  provenance.json  query_budget_curve.csv  report.md  verification.json
experiments/data/: .gitignore
experiments/gwas_chi_square_pnas2020_2026_07_17/: run_study.py
experiments/gwas_chi_square_pnas2020_2026_07_17/results/: gwas_chi_square_pnas2020.json  gwas_top_hits.csv
experiments/heprs_prs_reproduction_2026_07_17/: PROVENANCE.md  run_study.py
experiments/heprs_prs_reproduction_2026_07_17/results/: head_to_head_benchmark.json  (+2 more)
experiments/public_af_fst_2026_07_09/: run_study.py
experiments/public_ld_window_2026_07_09/: README.md  run_study.py
experiments/public_real_dna_summary_2026_07_09/: appendix.md
experiments/real_human_dna_igsr_2026_07_09/: README.md  run_study.py
(+64 files in other folders)
