[project]
name = "blindmachine"
version = "0.1.0"
description = "blind — the open-source trust CLI for The Blind Machine: governed, content-addressed computation on encrypted data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "The Blind Machine" }]
keywords = ["fhe", "homomorphic-encryption", "privacy", "trust", "cli"]

# Runtime deps. NOTE: `tenseal` (and any crypto library) is deliberately NOT here.
# Crypto lives in the protocol bundles' own env/uv.lock, never in the CLI.
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "platformdirs>=4.2",
    "keyring>=25.0",
    "cryptography>=42.0",
]

[project.scripts]
blind = "blind.__main__:main"

[project.urls]
Homepage = "https://blindmachine.org"
Source = "https://github.com/blindmachine/blind-cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
# Plotting is an OPTIONAL extra, deliberately NOT a core dependency: the
# trust-critical CLI stays light + network-free, and `blind bench` still emits
# CSV/MD/TeX (only the plot SVGs are skipped) when matplotlib is absent.
plots = [
    "matplotlib>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

# Dev dependency group so `uv run pytest` works out of the box (uv syncs this by default).
# matplotlib here (not in core `dependencies`) lets the plot-emitter tests run under
# `uv run pytest` while keeping the shipped CLI dependency-light.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "matplotlib>=3.8",
]
