[project]
name = "blind-protocol-genotype-pair-ld"
version = "1.0.0"
description = "Blind Machine draft protocol: genotype_pair_ld (TenSEAL BFV adjacent-pair genotype product moments)."
requires-python = "==3.11.*"
dependencies = [
    "tenseal==0.3.16",
    "numpy>=1.26,<2",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
