[project]
name = "blind-application-gwas-covariate-adjusted"
version = "1.0.0"
description = "Blind Machine curated application: gwas_covariate_adjusted (TenSEAL additive BFV). Reproduces the covariate-adjusted GWAS (semi-parallel LRA) of Blatt et al., PNAS 2020, with an additive-only encrypted circuit (all products formed locally by each data owner)."
requires-python = "==3.11.*"
dependencies = [
    # The crypto library is an ordinary, uv-locked application dependency (Apache-2.0),
    # same pin as the flagship so the whole registry shares one audited TenSEAL build.
    "tenseal==0.3.16",
    # numpy is used by local_project_owner.decode for the k×k covariate inverse and the
    # per-SNP score test (project-owner-local, not in the sandbox). TenSEAL also needs it.
    "numpy>=1.26,<2",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
